--- a/cloudclassifier.ipynb
+++ b/cloudclassifier.ipynb
@@ -485,8 +485,8 @@
     "from watson_developer_cloud import NaturalLanguageClassifierV1\n",
     "\n",
     "natural_language_classifier = NaturalLanguageClassifierV1(\n",
-    "    username=\"5076a2c7-fcae-4d04-8186-9f1da5c87621\",\n",
-    "    password=\"YuOnSEMABaSb\")\n"
+    "    username=\"YOUR USERNAME\",\n",
+    "    password=\"YOUR PASSWORD\")\n"
    ]
   },
   {
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "{'classifier_id': 'f33041x451-nlc-2892',\n",
+       "{'classifier_id': 'classifier_id',\n",
        " 'created': '2018-10-15T23:09:57.475Z',\n",
        " 'language': 'en',\n",
        " 'name': 'new Cloud Classifier',\n",
@@ -539,7 +539,7 @@
     }
    ],
    "source": [
-    "natural_language_classifier.get_classifier('f33041x451-nlc-2892').get_result()"
+    "natural_language_classifier.get_classifier('YOUR CLASSIFIER ID').get_result()"
    ]
   },
   {
@@ -550,7 +550,7 @@
    "source": [
     "watsonpred = []\n",
     "for i in testset2:\n",
-    "    x = natural_language_classifier.classify(\"f33041x451-nlc-2892\",re.sub(' +',' ',\" \".join(re.split(r'[^\\w]', re.sub(re.compile(\"/\\*.*?\\*/\",re.DOTALL ) ,\"\" ,i[0]))))[0:1024])\n",
+    "    x = natural_language_classifier.classify(\"YOUR CLASSIFIER ID\",re.sub(' +',' ',\" \".join(re.split(r'[^\\w]', re.sub(re.compile(\"/\\*.*?\\*/\",re.DOTALL ) ,\"\" ,i[0]))))[0:1024])\n",
     "    watsonpred.append(x.get_result()['top_class'])"
    ]
   },
